// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`payments-list-core displays an error state on failed data fetch 1`] = `
<payments-list-core>
  <div>
    <payments-list-filters></payments-list-filters>
    <div class="table-wrapper">
      <table class="table table-hover">
        <thead class="sticky-top table-head" part="table-head">
          <tr class="table-light text-nowrap" part="table-head-row">
            <th part="table-head-cell" scope="col" title="The date and time each payment was made">
              Date
            </th>
            <th part="table-head-cell" scope="col" title="The dollar amount of each payment">
              Amount
            </th>
            <th part="table-head-cell" scope="col" title="The current status of each payment">
              Status
            </th>
            <th part="table-head-cell" scope="col" title="The type of each payment">
              Type
            </th>
            <th part="table-head-cell" scope="col" title="The payment description, if you provided one">
              Description
            </th>
            <th part="table-head-cell" scope="col" title="The name associated with the payment method">
              Account Holder
            </th>
            <th part="table-head-cell" scope="col" title="The brand and last 4 digits of the payment method">
              Payment Method
            </th>
          </tr>
        </thead>
        <tbody class="table-body" part="table-body">
          <tr>
            <td class="error-state" colspan="7" data-test-id="table-error-state" part="error-state" style="text-align: center;">
              An unexpected error occurred: Fetch error
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="7" part="pagination-bar">
              <pagination-menu>
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination" part="pagination">
                    <li class="disabled page-item" part="page-item">
                      <a class="page-link" href="#" part="page-link page-link-disabled">
                        <span class="me-1" part="page-link-arrow">
                          «
                        </span>
                        <span part="page-button-text">
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="page-link page-link-disabled">
                        <span part="page-link-text">
                          Next
                        </span>
                        <span class="ms-1" part="page-link-arrow">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</payments-list-core>
`;

exports[`payments-list-core renders properly with fetched data 1`] = `
<payments-list-core>
  <div>
    <payments-list-filters></payments-list-filters>
    <div class="table-wrapper">
      <table class="table table-hover">
        <thead class="sticky-top table-head" part="table-head">
          <tr class="table-light text-nowrap" part="table-head-row">
            <th part="table-head-cell" scope="col" title="The date and time each payment was made">
              Date
            </th>
            <th part="table-head-cell" scope="col" title="The dollar amount of each payment">
              Amount
            </th>
            <th part="table-head-cell" scope="col" title="The current status of each payment">
              Status
            </th>
            <th part="table-head-cell" scope="col" title="The type of each payment">
              Type
            </th>
            <th part="table-head-cell" scope="col" title="The payment description, if you provided one">
              Description
            </th>
            <th part="table-head-cell" scope="col" title="The name associated with the payment method">
              Account Holder
            </th>
            <th part="table-head-cell" scope="col" title="The brand and last 4 digits of the payment method">
              Payment Method
            </th>
          </tr>
        </thead>
        <tbody class="table-body" part="table-body">
          <tr data-row-entity-id="py_1A2B3C4D5E6F7G8H9I0J" data-test-id="table-row" part="table-row table-row-odd">
            <td part="table-cell">
              <div class="fw-bold">
                May 1, 2024
              </div>
              <div class="fw-bold">
                8:45am
              </div>
            </td>
            <td part="table-cell">
              $123.45 USD
            </td>
            <td part="table-cell">
              <span class="badge bg-success" title="This payment was successfully captured">
                Succeeded
              </span>
            </td>
            <td part="table-cell">
              Card
            </td>
            <td part="table-cell">
              one-time payment
            </td>
            <td part="table-cell">
              test card
            </td>
            <td part="table-cell">
              **** 1234
            </td>
          </tr>
          <tr data-row-entity-id="py_2B3C4D5E6F7G8H9I0J1K" data-test-id="table-row" part="table-row table-row-even">
            <td part="table-cell">
              <div class="fw-bold">
                Jun 1, 2024
              </div>
              <div class="fw-bold">
                8:45am
              </div>
            </td>
            <td part="table-cell">
              $234.56 USD
            </td>
            <td part="table-cell">
              <span class="badge bg-primary" title="This ACH payment was processed, but the funds have not settled. It could still succeed or fail.">
                Pending
              </span>
            </td>
            <td part="table-cell">
              ACH
            </td>
            <td part="table-cell">
              subscription payment
            </td>
            <td part="table-cell">
              test bank account
            </td>
            <td part="table-cell">
              **** 5678
            </td>
          </tr>
          <tr data-row-entity-id="py_3C4D5E6F7G8H9I0J1K2L" data-test-id="table-row" part="table-row table-row-odd">
            <td part="table-cell">
              <div class="fw-bold">
                Jul 1, 2024
              </div>
              <div class="fw-bold">
                8:45am
              </div>
            </td>
            <td part="table-cell">
              $345.67 USD
            </td>
            <td part="table-cell">
              <span class="badge bg-success" title="This payment was successfully captured">
                Succeeded
              </span>
            </td>
            <td part="table-cell">
              Card
            </td>
            <td part="table-cell">
              manual payment
            </td>
            <td part="table-cell">
              test card
            </td>
            <td part="table-cell">
              **** 9101
            </td>
          </tr>
          <tr data-row-entity-id="py_1A2B3C4D5E6F7G8H9I0J" data-test-id="table-row" part="table-row table-row-even">
            <td part="table-cell">
              <div class="fw-bold">
                May 1, 2024
              </div>
              <div class="fw-bold">
                8:45am
              </div>
            </td>
            <td part="table-cell">
              $123.45 USD
            </td>
            <td part="table-cell">
              <span class="badge bg-danger" title="This card payment did not go through (it will not appear in a payout)">
                Failed
              </span>
            </td>
            <td part="table-cell">
              Card
            </td>
            <td part="table-cell">
              one-time payment
            </td>
            <td part="table-cell">
              test card
            </td>
            <td part="table-cell">
              **** 1234
            </td>
          </tr>
          <tr data-row-entity-id="py_2B3C4D5E6F7G8H9I0J1K" data-test-id="table-row" part="table-row table-row-odd">
            <td part="table-cell">
              <div class="fw-bold">
                Jun 1, 2024
              </div>
              <div class="fw-bold">
                8:45am
              </div>
            </td>
            <td part="table-cell">
              $234.56 USD
            </td>
            <td part="table-cell">
              <span class="badge bg-primary" title="This ACH payment was processed, but the funds have not settled. It could still succeed or fail.">
                Pending
              </span>
            </td>
            <td part="table-cell">
              ACH
            </td>
            <td part="table-cell">
              subscription payment
            </td>
            <td part="table-cell">
              test bank account
            </td>
            <td part="table-cell">
              **** 5678
            </td>
          </tr>
          <tr data-row-entity-id="py_3C4D5E6F7G8H9I0J1K2L" data-test-id="table-row" part="table-row table-row-even">
            <td part="table-cell">
              <div class="fw-bold">
                Jul 1, 2024
              </div>
              <div class="fw-bold">
                8:45am
              </div>
            </td>
            <td part="table-cell">
              $345.67 USD
            </td>
            <td part="table-cell">
              <span class="badge bg-secondary" title="The account holder disputed this payment. The amount has been returned and a fee assessed.">
                Disputed
              </span>
            </td>
            <td part="table-cell">
              Card
            </td>
            <td part="table-cell">
              manual payment
            </td>
            <td part="table-cell">
              test card
            </td>
            <td part="table-cell">
              **** 9101
            </td>
          </tr>
          <tr data-row-entity-id="py_4D5E6F7G8H9I0J1K2L3M" data-test-id="table-row" part="table-row table-row-odd">
            <td part="table-cell">
              <div class="fw-bold">
                Aug 1, 2024
              </div>
              <div class="fw-bold">
                8:45am
              </div>
            </td>
            <td part="table-cell">
              $345.67 USD
            </td>
            <td part="table-cell">
              <span class="badge bg-secondary" title="The full amount of this payment has been refunded">
                Fully Refunded
              </span>
            </td>
            <td part="table-cell">
              Card
            </td>
            <td part="table-cell">
              refund payment
            </td>
            <td part="table-cell">
              test card
            </td>
            <td part="table-cell">
              **** 1122
            </td>
          </tr>
        </tbody>
        <tfoot class="sticky-bottom">
          <tr class="align-middle table-light">
            <td colspan="7" part="pagination-bar">
              <pagination-menu>
                <nav aria-label="Table pagination" class="d-flex gap-3 justify-content-end">
                  <ul class="m-0 pagination" part="pagination">
                    <li class="disabled page-item" part="page-item">
                      <a class="page-link" href="#" part="page-link page-link-disabled">
                        <span class="me-1" part="page-link-arrow">
                          «
                        </span>
                        <span part="page-button-text">
                          Previous
                        </span>
                      </a>
                    </li>
                    <li class="disabled page-item">
                      <a class="page-link" href="#" part="page-link page-link-disabled">
                        <span part="page-link-text">
                          Next
                        </span>
                        <span class="ms-1" part="page-link-arrow">
                          »
                        </span>
                      </a>
                    </li>
                  </ul>
                </nav>
              </pagination-menu>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</payments-list-core>
`;
